[package]
name = "save-dweb-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
iroh = "0.24.0"
iroh-blobs = "0.24.0"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", version = "0.4.3" }
veilid-iroh-blobs = { git = "https://github.com/RangerMauve/veilid-iroh-blobs.git", version = "0.1.1" }
tracing = "0.1"
xdg = "2.4"
tmpdir = "1"
serde = "1.0.204"
serde_cbor = "0.11.2"
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"
tokio = {version ="1.38.1", features=["full"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
bytes = "1.6.1"
serial_test = "3.1.1"
url = "2.5.2"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"
