[package]
name = "save-dweb-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
iroh = "0.24.0"
iroh-blobs = "0.24.0"
# Pin to avoid keyvaluedb-sqlite 0.1.6 + rusqlite 0.38 break (u64 FromSql not implemented)
keyvaluedb-sqlite = "0.1.5"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", tag = "v0.5.1" }
# v0.3.0 matches Veilid 0.5.1 API
veilid-iroh-blobs = { git = "https://github.com/RangerMauve/veilid-iroh-blobs", tag = "v0.3.0" }
tracing = "0.1"
xdg = "2.4"
tmpdir = "1"
serde = "1.0.204"
serde_cbor = "0.11.2"
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"
tokio = {version ="1.38.1", features=["full"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
bytes = "1.6.1"
serial_test = "3.1.1"
url = "2.5.2"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"

# Temporary patch for Veilid fanout queue underflow bug
[patch."https://gitlab.com/veilid/veilid.git"]
veilid-core = { git = "https://gitlab.com/tripledoublev/veilid.git", branch = "fix-underflow" }
